--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
-  "name": "flux-server",
-  "version": "1.0.0",
-  "description": "This project was bootstrapped with Fastify-CLI.",
-  "main": "app.js",
+  "name": "flux-service",
+  "version": "0.1.0",
+  "description": "Backend to support Flux, the social exchange for Zanzibar's World of Nuclear Energy.",
+  "main": "index.js",
   "directories": {
     "test": "test"
   },
   "scripts": {
-    "test": "node --test test/**/*.test.js",
-    "start": "fastify start -l info app.js",
-    "dev": "fastify start -w -l info -P app.js"
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "test": "node --test test/**/*.test.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": ["social", "exchange", "nuclear", "energy", "microservice", "fastify"],
+  "author": "Nuclear Ambitions LLC",
+  "license": "Apache-2.0",
   "dependencies": {
-    "fastify": "^5.0.0",
-    "fastify-plugin": "^5.0.0",
     "@fastify/autoload": "^6.0.0",
     "@fastify/sensible": "^6.0.0",
-    "fastify-cli": "^7.0.1"
+    "fastify": "^5.0.0",
+    "fastify-cli": "^7.0.1",
+    "fastify-plugin": "^5.0.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "@types/node": "^22.7.5",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^5.6.3"
+  }
 }
