--- a/package.json
+++ b/package.json
@@ -12,7 +12,14 @@
     "start": "node dist/index.js",
     "test": "node --test test/**/*.test.js"
   },
-  "keywords": ["social", "exchange", "nuclear", "energy", "microservice", "fastify"],
+  "keywords": [
+    "social",
+    "exchange",
+    "nuclear",
+    "energy",
+    "microservice",
+    "fastify"
+  ],
   "author": "Nuclear Ambitions LLC",
   "license": "Apache-2.0",
   "dependencies": {
@@ -20,10 +27,13 @@
     "@fastify/sensible": "^6.0.0",
     "fastify": "^5.0.0",
     "fastify-cli": "^7.0.1",
-    "fastify-plugin": "^5.0.0"
+    "fastify-plugin": "^5.0.0",
+    "kysely": "^0.27.4",
+    "pg": "^8.13.0"
   },
   "devDependencies": {
     "@types/node": "^22.7.5",
+    "@types/pg": "^8.11.10",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   }
