--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
+    "migrate": "bash scripts/migrate.sh",
+    "seed": "bash scripts/seed.sh",
+    "generate": "kysely-codegen --dialect=postgres --url=postgresql://admin:password@localhost:5430/template",
     "test": "node --test test/**/*.test.js"
   },
   "keywords": [
@@ -25,11 +28,13 @@
   "dependencies": {
     "@fastify/autoload": "^6.0.0",
     "@fastify/sensible": "^6.0.0",
+    "dotenv": "^16.4.5",
     "fastify": "^5.0.0",
     "fastify-cli": "^7.0.1",
     "fastify-plugin": "^5.0.0",
     "kysely": "^0.27.4",
-    "pg": "^8.13.0"
+    "pg": "^8.13.0",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^22.7.5",
