--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "start": "node dist/index.js",
     "migrate": "bash scripts/migrate.sh",
     "seed": "bash scripts/seed.sh",
-    "generate": "kysely-codegen --dialect=postgres --url=postgresql://admin:password@localhost:5430/template",
+    "generate": "kysely-codegen --dialect=postgres --out-file=./src/db/types.ts",
+    "generate-help": "kysely-codegen --help",
     "test": "node --test test/**/*.test.js"
   },
   "keywords": [
@@ -39,6 +40,7 @@
   "devDependencies": {
     "@types/node": "^22.7.5",
     "@types/pg": "^8.11.10",
+    "kysely-codegen": "^0.16.8",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.6.3"
   }
