--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
   "license": "Apache-2.0",
   "dependencies": {
     "@fastify/autoload": "^6.0.0",
+    "@fastify/cors": "^10.0.1",
+    "@fastify/oauth2": "^8.1.0",
     "@fastify/sensible": "^6.0.0",
     "dotenv": "^16.4.5",
     "fastify": "^5.0.0",
