--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@fastify/cors": "^10.0.1",
     "@fastify/oauth2": "^8.1.0",
     "@fastify/sensible": "^6.0.0",
+    "axios": "^1.7.7",
     "dotenv": "^16.4.5",
     "fastify": "^5.0.0",
     "fastify-cli": "^7.0.1",
