--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@fastify/autoload": "^6.0.0",
     "@fastify/cors": "^10.0.1",
+    "@fastify/env": "^5.0.1",
     "@fastify/oauth2": "^8.1.0",
     "@fastify/sensible": "^6.0.0",
     "axios": "^1.7.7",
