--- a/package.json
+++ b/package.json
@@ -39,11 +39,13 @@
     "fastify": "^5.0.0",
     "fastify-cli": "^7.0.1",
     "fastify-plugin": "^5.0.0",
+    "jsonwebtoken": "^9.0.2",
     "kysely": "^0.27.4",
     "pg": "^8.13.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.7.8",
     "@types/pg": "^8.11.10",
     "kysely-codegen": "^0.17.0",
