--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "typeRoots": ["./node_modules/@types", "./src/types"]
+    "typeRoots": ["./node_modules/@types", "./src/types"],
+    "declaration": true
   },
   "include": ["src/**/*.ts", "dist/**/*.js"],
   "exclude": ["node_modules"]
