--- a/package.json
+++ b/package.json
@@ -29,29 +29,29 @@
   "author": "Nuclear Ambitions LLC",
   "license": "Apache-2.0",
   "dependencies": {
-    "@fastify/autoload": "^6.0.2",
-    "@fastify/cors": "^10.0.1",
-    "@fastify/env": "^5.0.1",
-    "@fastify/oauth2": "^8.1.0",
-    "@fastify/sensible": "^6.0.1",
-    "axios": "^1.7.7",
-    "dotenv": "^16.4.5",
-    "fastify": "^5.1.0",
-    "fastify-cli": "^7.0.1",
+    "@fastify/autoload": "^6.0.3",
+    "@fastify/cors": "^10.0.2",
+    "@fastify/env": "^5.0.2",
+    "@fastify/oauth2": "^8.1.1",
+    "@fastify/sensible": "^6.0.2",
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7",
+    "fastify": "^5.2.1",
+    "fastify-cli": "^7.3.0",
     "fastify-plugin": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
-    "kysely": "^0.27.4",
+    "kysely": "^0.27.5",
     "pg": "^8.13.1",
-    "resend": "^4.0.1-alpha.0",
-    "zod": "^3.23.8"
+    "resend": "^4.1.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
-    "@types/jsonwebtoken": "^9.0.7",
-    "@types/node": "^22.9.0",
-    "@types/pg": "^8.11.10",
+    "@types/jsonwebtoken": "^9.0.8",
+    "@types/node": "^22.12.0",
+    "@types/pg": "^8.11.11",
     "kysely-codegen": "^0.17.0",
-    "kysely-ctl": "^0.9.0",
+    "kysely-ctl": "^0.10.1",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.7.3"
   }
 }
