--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@fastify/env": "^5.0.2",
     "@fastify/oauth2": "^8.1.1",
     "@fastify/sensible": "^6.0.2",
+    "@sinclair/typebox": "^0.34.15",
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
