--- a/package.json
+++ b/package.json
@@ -1,24 +1,8 @@
 {
-  "name": "flux-service",
-  "version": "0.2.0",
-  "description": "Backend to support Flux, the social exchange for Zanzibar's World of Nuclear Energy.",
+  "name": "won-service",
+  "version": "0.3.0",
+  "description": "Backing service supporting Zanzibar's World of Nuclear Energy.",
   "main": "index.js",
-  "directories": {
-    "test": "test"
-  },
-  "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js",
-    "migrate:up": "bash scripts/migrate.sh up",
-    "migrate:down": "bash scripts/migrate.sh down",
-    "migrate:latest": "bash scripts/migrate.sh latest",
-    "seed": "bash scripts/seed.sh",
-    "generate": "kysely-codegen --dialect=postgres --out-file=./src/db/types.ts",
-    "generate-supa": "kysely-codegen --dialect=postgres --out-file=./src/db/supaTypes.ts",
-    "generate-help": "kysely-codegen --help",
-    "test": "node --test test/**/*.test.js"
-  },
   "keywords": [
     "social",
     "exchange",
@@ -27,8 +11,21 @@
     "microservice",
     "fastify"
   ],
-  "author": "Nuclear Ambitions LLC",
+  "homepage": "https://github.com/ZanzibarNuclear/won-service",
   "license": "Apache-2.0",
+  "author": "Nuclear Ambitions LLC (https://nuclearambitions.com)",
+  "scripts": {
+    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "build": "tsc",
+    "start": "node dist/index.js",
+    "migrate:up": "bash scripts/migrate.sh up",
+    "migrate:down": "bash scripts/migrate.sh down",
+    "migrate:latest": "bash scripts/migrate.sh latest",
+    "generate": "kysely-codegen --dialect=postgres --out-file=./src/db/types.ts",
+    "generate-supa": "kysely-codegen --dialect=postgres --out-file=./src/db/supaTypes.ts",
+    "generate-help": "kysely-codegen --help",
+    "test": "node --test test/**/*.test.js"
+  },
   "dependencies": {
     "@fastify/autoload": "^6.1.0",
     "@fastify/cors": "^10.0.2",
@@ -56,5 +53,8 @@
     "kysely-ctl": "^0.11.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.7.3"
+  },
+  "engines": {
+    "node": ">=22.13.0"
   }
 }
