--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
     "fastify-cli": "^7.3.0",
+    "fastify-favicon": "^5.0.0",
     "fastify-plugin": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
     "kysely": "^0.27.5",
