--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,1 +1,6 @@
-{}
+{
+  "files.autoSave": "afterDelay",
+  "files.autoSaveWorkspaceFilesOnly": true,
+  "editor.formatOnSave": true,
+  "workbench.editor.closeOnFileDelete": true
+}
