--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.0.1",
     "@fastify/env": "^5.0.2",
+    "@fastify/multipart": "^9.0.3",
     "@fastify/oauth2": "^8.1.2",
     "@fastify/sensible": "^6.0.3",
     "@fastify/session": "^11.1.0",
+    "@fastify/static": "^8.1.1",
     "@fastify/swagger": "^9.4.2",
     "@sinclair/typebox": "^0.34.33",
     "axios": "^1.8.4",
