--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "files.autoSave": "afterDelay",
+  "files.autoSave": "onFocusChange",
   "files.autoSaveWorkspaceFilesOnly": true,
   "editor.formatOnSave": true,
   "workbench.editor.closeOnFileDelete": true
