Close security gaps

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,6 @@
   "files.autoSave": "onFocusChange",
   "files.autoSaveWorkspaceFilesOnly": true,
   "editor.formatOnSave": true,
-  "workbench.editor.closeOnFileDelete": true
+  "workbench.editor.closeOnFileDelete": true,
+  "zencoder.enableRepoIndexing": true
 }
