--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
+    "mig:mongo": "tsc scripts/mongo/migration-1.ts && node scripts/mongo/migration-1.js",
     "migrate:up": "bash scripts/migrate.sh up",
     "migrate:down": "bash scripts/migrate.sh down",
     "migrate:latest": "bash scripts/migrate.sh latest",
@@ -31,6 +32,7 @@
     "@fastify/cookie": "^11.0.2",
     "@fastify/cors": "^11.0.1",
     "@fastify/env": "^5.0.2",
+    "@fastify/mongodb": "^9.0.2",
     "@fastify/multipart": "^9.0.3",
     "@fastify/oauth2": "^8.1.2",
     "@fastify/sensible": "^6.0.3",
